--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.608.0",
+    "jest": "^25.1.0",
     "serverless-bundle": "^1.2.5",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.3.3",
     "uuid": "^3.4.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "stripe": "^8.4.1"
+  }
 }
